# t-SNE

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  baseline.c  matrix.h  mnist100_X_pca.txt  mnist100_Y_init.txt  mnist128_X_pca.txt  mnist128_Y_init.txt  mnist2500_X_pca.txt  mnist2500_Y_init.txt  python_baseline.py  res.txt  submit.sh  tmp.txt
analysis/benchmark/: euclidean_dist_full.csv  euclidean_dist_full_raw.csv  joint_probs_full.csv  joint_probs_full_raw.csv  tsne_full_1000.csv  tsne_full_1000_raw.csv
analysis/euclidean_dist/: euclidean_dist.xlsx  euclidean_dist_alt.xlsx  euclidean_dist_low.xlsx
analysis/flop_count/: advisor.txt  formula.txt
analysis/joint_probs/: Joint_Probs.ipynb  joint_probs.csv  joint_probs.xlsx
analysis/plots/: T-SNE roofline.ipynb  plots.xlsx
analysis/tsne/: T-SNE roofline.ipynb  callgrind.out.tsne.10  callgrind.out.tsne.11  callgrind.out.tsne.12  callgrind.out.tsne.2  callgrind.out.tsne.3  callgrind.out.tsne.4  callgrind.out.tsne.5  callgrind.out.tsne.6  callgrind.out.tsne.7  callgrind.out.tsne.8  callgrind.out.tsne.9  cycles_full_100.csv  cycles_full_100_intel.csv  tsne.10.csv  tsne.11.csv  tsne.2.csv  tsne.3.csv  tsne.4.csv  tsne.5.csv  tsne.6.csv  tsne.7.csv  tsne.8.csv  tsne.9.csv  tsne.xlsx  tsne_perf.csv
benchmark/: CMakeLists.txt  affinities_benchmark.cpp  benchmark.cpp  benchmark.h  benchmark_grad_desc.cpp  func_registry.cpp  main.cpp  main_euclidean_dist.cpp  main_euclidean_dist_low.cpp  main_full.cpp  main_grad_descent.cpp  main_joint_probs.cpp  perf_joint_probs.cpp  tsc_x86.h
callgrind/: callgrind.out.baseline
include/tsne/: baseline.h  benchmark.h  debug.h  func_registry.h  grad_descent.h  hyperparams.h  matrix.h
include/vectorclass/: README.md
profiling/: CMakeLists.txt  main.cpp  valgrind.sh  vtune.sh
profiling/joint_probs/: callgrind.out.36550  joint_probs_cache_pca2500.txt  main.cpp
profiling/tsne/: main.cpp
src/: CMakeLists.txt  affinities.cpp  baseline.cpp  euclidean_dist.cpp  euclidean_dist_low.cpp  grad_desc.cpp  grad_descent.cpp  joint_probs.cpp  log_perplexity.cpp  matrix.cpp  tsne.cpp  tsne_less_matrices.cpp  tsne_no_vars.cpp
test/: CMakeLists.txt  tsne_test.cc  tsne_test.cpp  tsne_test.h
testing/: CMakeLists.txt  base.cpp  base.h  main.cpp  tests.cpp  tests.h
